<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Изменить" />

    <item android:id="@+id/edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Удалить" />
</menu>